solved the routing of the app for github pages using HashRouter instead of BrowserRouter

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
   <title>.::Ali Bahrami | Homepage::.</title>
 </head>
 
-<body>
+<body style="
+  background-image: radial-gradient(circle at 11% 62%, rgba(205, 205, 205,0.04) 0%, rgba(205, 205, 205,0.04) 50%,rgba(149, 149, 149,0.04) 50%, rgba(149, 149, 149,0.04) 100%),radial-gradient(circle at 78% 10%, rgba(49, 49, 49,0.04) 0%, rgba(49, 49, 49,0.04) 50%,rgba(254, 254, 254,0.04) 50%, rgba(254, 254, 254,0.04) 100%),radial-gradient(circle at 92% 43%, rgba(34, 34, 34,0.04) 0%, rgba(34, 34, 34,0.04) 50%,rgba(206, 206, 206,0.04) 50%, rgba(206, 206, 206,0.04) 100%),linear-gradient(329deg, rgb(241, 77, 33),rgb(218, 227, 61));
+  ; background-size: 100% 200%;">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
